--- a/pfc.tex
+++ b/pfc.tex
@@ -75,9 +75,11 @@
 \begin{document}
 
 \maketitle
-
+\newpage\null\thispagestyle{empty}\newpage
 \input{./acknowledgements/acknowledgements}
-
+\newpage\null\thispagestyle{empty}\newpage
+\input{./summary/summary}
+\newpage\null\thispagestyle{empty}\newpage
 \tableofcontents
 \begin{center}
 \line(1,0){250}
@@ -87,22 +89,20 @@ to other sections and chapters in the text are also clickable links. External hy
 Direct quotes and factual statements include numbered links in green to their source in the References. A linked list of 
 figures is available for reference at the end of this report.
 
-\input{./summary/summary}
-
 \input{./introduction/introduction}
 
 \input{./tech/techoverview}
-
+\newpage\null\thispagestyle{empty}\newpage
 \input{./arch/systemarch}
 
 \input{./future/futuredev}
-
+\newpage\null\thispagestyle{empty}\newpage
 \input{./planning/planning}
 
 \input{./conclusions/conclusions}
-
+\newpage\null\thispagestyle{empty}\newpage
 \input{./annexes/annexes}
-
+\newpage\null\thispagestyle{empty}\newpage
 \input{./bibliography/bibliography}
 \listoffigures
 \printindex
