--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -2,7 +2,7 @@
 % 	An ASLab Project,
 % 	Developed by Daniel Peiró
 % 	ETSII, UPM 2014-2015
-\chapter{Resumen Ejecutivo\\(Executive Summary in Spanish)}
+\chapter*{Resumen Ejecutivo\\(Executive Summary in Spanish)}
 
 El objetivo de este proyecto es el desarrollo de \textit{software} que proporcione una interfaz gŕafica de usuario (en adelante 
 \textit{GUI}) con una variedad de herramientas diseñadas para recoger entradas (\textit{inputs}) para el control de robots, asi 
@@ -79,8 +79,8 @@ iterados para cada módulo de la aplicación, y finalmente mantenimiento), se pl
 estudio del estado del arte de las tecnologías que cumplen con estos requisitos y el diagrama de objetivos. Se diseñó una 
 arquitectura del sistema que cumplía con los objetivos y se desarrolló la aplicación. Por último se probó el funcionamiento de la 
 aplicación y se escribió la memoria del proyecto, en la que se describe en detalle el estado del arte de las tecnologías 
-empleadas (capítulo 3), la arquitectura del sistema (capítulo 4), el desarrollo futuro (capítulo 5) y la planificación del 
-proyecto (capítulo 6). Se incluye además como anexo el manual de usuario de la aplicación.\\
+empleadas (capítulo 2), la arquitectura del sistema (capítulo 3), el desarrollo futuro (capítulo 4) y la planificación del 
+proyecto (capítulo 5). Se incluye además como anexo el manual de usuario de la aplicación.\\
 
 Los puntos básicos de la solución propuesta son los siguientes:
 \begin{itemize}
@@ -110,7 +110,7 @@ Los puntos básicos de la solución propuesta son los siguientes:
 	Esto da respuesta al requisito de personalización.
 	\item \textbf{Código abierto}: Todas las tecnologías empleados son de código abierto.
 \end{itemize}
-Los resultados del proyecto se detallan en el capítulo 7 de la memoria.\\
+Los resultados del proyecto se detallan en el capítulo 6 de la memoria.\\
 
 Como demostración del funcionamiento de la aplicación, se realizó la integración de la misma con tres robots distintos:
 \begin{itemize}
